perbaikan dro dan rapikan API

--- a/presensi-kpu-batu-be.csproj
+++ b/presensi-kpu-batu-be.csproj
@@ -23,8 +23,8 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+	<ItemGroup>
+	  <Folder Include="DTO\Request\" />
+	</ItemGroup>
 
 </Project>
