--- a/.github/workflows/db-warmup.yml
+++ b/.github/workflows/db-warmup.yml
@@ -2,7 +2,7 @@
 
 on:
   schedule:
-    - cron: "20 2 * * *"
+    - cron: "10 3 * * *"
   workflow_dispatch:
 
 jobs:
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name:  Ping health DB
         run: |
-          curl "${{ secrets.API_BASE_URL }}/auth/health-db" 
+          curl -X POST "${{ secrets.API_BASE_URL }}/auth/health-db" 
