--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build & Push Image
         run: |
-          docker build -t ghcr.io/${{ github.actor }}/presensi-kpu-batu-be:latest ./presensi-kpu-batu-be
+          docker build -t ghcr.io/${{ github.actor }}/presensi-kpu-batu-be:latest .
           docker push ghcr.io/${{ github.actor }}/presensi-kpu-batu-be:latest
 
       - name: Deploy to VPS
