--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -6,7 +6,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -20,7 +22,6 @@ jobs:
         run: |
           docker build -t ghcr.io/${{ github.actor }}/presensi-kpu-batu-be:latest .
           docker push ghcr.io/${{ github.actor }}/presensi-kpu-batu-be:latest
-
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.3
         with:
