--- a/presensi-kpu-batu-be.csproj
+++ b/presensi-kpu-batu-be.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="ClosedXML" Version="0.102.2" />
+		<PackageReference Include="FirebaseAdmin" Version="2.4.0" />
 		<PackageReference Include="Google.Apis.Auth" Version="1.73.0" />
 		<PackageReference Include="Google.Apis.Drive.v3" Version="1.73.0.3996" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
